--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "watch": "tailwindcss build ./src/assets/main.css -o ./dist/styles.css",
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -20,6 +22,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
     "autoprefixer": "^10.4.16",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.31",
     "sass": "^1.68.0",
     "tailwindcss": "^3.3.5",
